--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -12,4 +12,13 @@
  */
 
 return array(
+	'db' => array(
+		'username' 			=> 'root',
+		'password' 			=> '',
+		'driver'			=> 'Pdo',
+		'dsn'           	=> 'mysql:dbname=abc;host=localhost',
+		'driver_options' 	=> array(
+		    PDO::MYSQL_ATTR_INIT_COMMAND => 'SET NAMES \'UTF8\''
+		),
+	),
 );
